--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,18 +34,18 @@
 <!--    flex: 1;-->
 <!--  }-->
 
-<!--  .toolbar {-->
-<!--    position: absolute;-->
-<!--    top: 0;-->
-<!--    left: 0;-->
-<!--    right: 0;-->
-<!--    height: 60px;-->
-<!--    display: flex;-->
-<!--    align-items: center;-->
-<!--    background-color: #1976d2;-->
-<!--    color: white;-->
-<!--    font-weight: 600;-->
-<!--  }-->
+<!--  .toolbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    background-color: #1976d2;
+    color: white;
+    font-weight: 600;
+  }-->
 
 <!--  .toolbar img {-->
 <!--    margin: 0 16px;-->
@@ -532,7 +532,8 @@
 <!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
 
 
+<app-topbar></app-topbar>
+<div class="content" role="main">
+  <router-outlet></router-outlet>
+</div>
 
-<!--<router-outlet></router-outlet>-->
-
-<app-home></app-home>
