--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .content {
   display: flex;
-  margin: 120px;
-  max-width: 960px;
+  margin: 120px auto;
+  width: 85%;
   flex-direction: column;
   align-items: center;
 }
