Add card styling and icons
Co-authored-by: Flav <flaviuvadan@gmail.com>

--- a/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.html
+++ b/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.html
@@ -1,2 +1,5 @@
-<mat-card>{{name}}</mat-card>
+<mat-card class="card-container">
+  <mat-card-title>{{name}}</mat-card-title>
+  <mat-icon>add_box</mat-icon>
+</mat-card>
 
