--- a/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.scss
+++ b/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.scss
@@ -1,3 +1,16 @@
 mat-card {
-
+  background-color: white;
+  color: #333333;
+  cursor: pointer;
+  mat-card-title {
+    margin: 0;
+    font-size: 18px;
+  }
 }
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  vertical-align: center;
+}
+
