--- a/src/app/home/schedule-list/schedule-list.component.html
+++ b/src/app/home/schedule-list/schedule-list.component.html
@@ -1,7 +1,11 @@
 <app-schedule-list-item
   name="New Schedule"
-  (click)="redirectToSchedule()"
 ></app-schedule-list-item>
 <ng-container *ngFor="let item of scheduleListItems" class="schedule-list">
-  <app-schedule-list-item name="{{item.name}}"></app-schedule-list-item>
+  <app-schedule-list-item
+    name="{{item.name}}"
+    id="{{item.id}}"
+    (click)='redirectToSchedule(item.id)'
+  >
+  </app-schedule-list-item>
 </ng-container>
