Add week component to schedule folder
Co-authored-by: Flav <flaviuvadan@gmail.com>

--- a/src/app/schedule/class-list/class-list.component.html
+++ b/src/app/schedule/class-list/class-list.component.html
@@ -1,1 +1,7 @@
-<p>class-list works!</p>
+<ng-container *ngFor="let item of classListItems" class="schedule-list">
+  <app-class
+    name="{{item.name}}"
+    id="{{item.id}}"
+  >
+  </app-class>
+</ng-container>
