--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,2 +1,4 @@
-<p>{{id}}</p>
-<app-class-list></app-class-list>
+<div class="schedule">
+  <p>{{id}}</p>
+  <app-class-list></app-class-list>
+</div>
