--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,27 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+h1 {
+  font-size: 23px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 mat-card {
   border-width: 2px;
   background-color: white;
   margin: 10px 0;
   text-align: left;
   box-shadow: 0 2px 5px black;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  vertical-align: center;
+  background-color: white;
+  color: #333333;
+  cursor: pointer;
+  margin: 10px;
+  padding: 0 15px;
+  border-radius: 5px;
 }
