--- a/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.html
+++ b/src/app/home/schedule-list/schedule-list-item/schedule-list-item.component.html
@@ -1,5 +1,4 @@
-<mat-card class="card-container">
-  <mat-card-title>{{name}}</mat-card-title>
-  <mat-icon>add_box</mat-icon>
-</mat-card>
+<div class="card-container">
+  <h1>{{name}}</h1>
+</div>
 
