Small css changes to class.component.scss and app.component.scss
Co-authored-by: Flav <flaviuvadan@gmail.com>

--- a/src/app/schedule/class-list/class-list.component.html
+++ b/src/app/schedule/class-list/class-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngFor="let item of classListItems" class="schedule-list">
+<ng-container *ngFor="let item of classListItems" class="class-list">
   <app-class
     name="{{item.name}}"
     id="{{item.id}}"
